# Kirstens-clone

./: Build 90 Kirstens Info READ ME.txt
R16_3/: Build R16 README.txt  installed.xml
R16_3/doc/: LICENSE-3DX-README.txt
R16_3/indra/: CMakeLists.txt  develop.py
R16_3/scripts/: template_verifier.py
S16/indra/: develop.py
S16/linden/: install.xml
S16/scripts/: install.py
S18/: install.xml
S18/LICENSES/: curl.txt
S18/doc/: asset_urls.txt
S18/indra/: develop.py
S19/: install.xml
S19/doc/: contributions.txt
S19/indra/: CMakeLists.txt  develop.py
S20/: install.xml
S20/LICENSES/: qt-4.6-linden-changes.txt
S20/doc/: asset_urls.txt  contributions.txt  releasenotes-where.txt
S20/indra/: CMakeLists.txt  develop.py
S20/scripts/: build_version.py  install.py  setup-path.py  template_verifier.py
doc/: asset_urls.txt
indra/: CMakeLists.txt  develop.py
indra/avatarlib/: Avatar.cpp  Avatar.h  AvatarAttachment.cpp  AvatarAttachment.h  AvatarAttachmentSerializer.cpp  AvatarSerializer.cpp  AvatarSerializer.h  CMakeLists.txt  Cloth.h  ClothSerializer.h  ClothThread.cpp  CollisionCapsule.h  CollisionEllipsoid.cpp  CollisionShape.h  CommonHeaders.cpp  CommonHeaders.h  DynamicAnimation.h  DynamicLines.cpp  DynamicRenderable.cpp  Limb.cpp  Limb.h  OgreAvatar.h  Platform.cpp  Platform.h  PlatformWin.cpp  PlatformWin.h  RexAvatar.h  RexException.h  XmlDocument.h  XmlFile.cpp  XmlManager.cpp  myvec.h  srs.cpp  srs.h  tinyxml.h  trig.cpp
indra/cmake/: APR.cmake  JPEG.cmake  LLAudio.cmake  LLCommon.cmake  LLInventory.cmake  LLMedia.cmake  LLPrimitive.cmake  LLScene.cmake  LLVFS.cmake  LLWindow.cmake  (+3 more)
scripts/: install.py  setup-path.py  template_verifier.py
(+9388 files in other folders)
